QUERY OPTIMIZATIONS GIT-HUB Respository for version control Server name changes - database pooling for AuditTrailDatabaseConnectionPool.java ChatDatabaseConnectionPool.java DatabaseConnectionPool.java
removed buggy progress bar for PO UI

--- a/config.properties
+++ b/config.properties
@@ -1,2 +1,2 @@
-#Mon Dec 18 08:58:18 CST 2023
-sessionId=d623f317-e5dd-4c3d-8d2a-26a061e91484
+#Mon Dec 18 14:14:37 PST 2023
+sessionId=daffdef6-1a4c-4669-86ca-1180cf1598c6
