PO Updates Verify Approval Budgeting
Signed-off-by: charot-git <gamingandrei06@gmail.com>

--- a/config.properties
+++ b/config.properties
@@ -1,2 +1,2 @@
-#Mon Dec 18 14:14:37 PST 2023
-sessionId=daffdef6-1a4c-4669-86ca-1180cf1598c6
+#Wed Dec 20 19:14:22 CST 2023
+sessionId=f10b1b65-8e1c-480b-b428-2890d62268ed
