QUERY OPTIMIZATIONS GIT-HUB Respository for version control Server name changes - database pooling for AuditTrailDatabaseConnectionPool.java ChatDatabaseConnectionPool.java DatabaseConnectionPool.java
removed buggy progress bar for PO UI

--- a/config.properties
+++ b/config.properties
@@ -1,2 +1,2 @@
-#Wed Dec 20 19:14:22 CST 2023
-sessionId=f10b1b65-8e1c-480b-b428-2890d62268ed
+#Thu Dec 21 22:41:46 PST 2023
+sessionId=4cb23bab-e43f-4fcd-aa7f-4aa8dda367a9
