Credit Debit Memo UI Configuration for server management

--- a/config.properties
+++ b/config.properties
@@ -1,2 +1,2 @@
-#Wed Feb 07 14:31:21 CST 2024
-sessionId=37dcc1bb-f74c-43d7-963d-065de2e0b596
+#Thu Feb 08 00:54:16 PST 2024
+sessionId=cac04d66-4363-424b-91b5-c2f42d5a9c8c
