--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,12 @@
             <version>9.4.54.v20240208</version>
         </dependency>
         <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.5.6</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-controls</artifactId>
             <version>23-ea+3</version>
