--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
     "main": "index.js",
     "preferGlobal": "true",
     "repository": "",
-    "version": "1.0.2",
+    "version": "1.0.3",
     "jdeploy": {
         "jdk": true,
+        "args": ["--add-exports=javafx.base/com.sun.javafx.event=org.controlsfx.controls"],
         "javaVersion": "21",
         "jar": "target/VOS-1.0.1-shaded.jar",
         "javafx": false,
