--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,7 @@
             <artifactId>websocket-server</artifactId>
             <version>9.4.54.v20240208</version>
         </dependency>
+
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
@@ -169,6 +170,11 @@
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
             <version>3.12.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-text</artifactId>
+            <version>1.10.0</version>
         </dependency>
         <dependency>
             <groupId>com.google.zxing</groupId>
