--- a/pom.xml
+++ b/pom.xml
@@ -31,9 +31,15 @@
             <version>2.0.6</version> <!-- Use the latest stable version -->
         </dependency>
         <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+            <version>2.17.2</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.eclipse.jetty</groupId>
             <artifactId>jetty-server</artifactId>
-            <version>12.0.8</version>
+            <version>12.0.12</version>
         </dependency>
         <dependency>
             <groupId>org.eclipse.jetty.websocket</groupId>
