--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
     "main": "index.js",
     "preferGlobal": "true",
     "repository": "",
-    "version": "1.2.72",
+    "version": "1.2.90",
     "jdeploy": {
         "jdk": true,
         "args": ["--add-exports=javafx.base/com.sun.javafx.event=org.controlsfx.controls"],
         "javaVersion": "21",
+        "documentTypes": [{}],
         "jar": "target/VOS-1.0.1-shaded.jar",
         "javafx": false,
         "title": "VOS ERP - MEN2"
