--- a/package.json
+++ b/package.json
@@ -1,17 +1,16 @@
 {
-    "author": "charot",
-    "bin": {"": "jdeploy-bundle/jdeploy.js"},
-    "description": "Vertex Online System ERP including warehouse management, accounting, auditing, and reports modules. ",
+    "bin": {"VOS": "jdeploy-bundle/jdeploy.js"},
+    "author": "charotify",
+    "description": "Vertex Online System ERP including warehouse management, accounting, auditing, and reports modules.",
     "main": "index.js",
-    "preferGlobal": "true",
+    "preferGlobal": true,
     "repository": "",
-    "version": "1.2.90",
+    "version": "1.2.91",
     "jdeploy": {
-        "jdk": true,
+        "jdk": false,
         "args": ["--add-exports=javafx.base/com.sun.javafx.event=org.controlsfx.controls"],
         "javaVersion": "21",
-        "documentTypes": [{}],
-        "jar": "target/VOS-1.0.1-shaded.jar",
+        "jar": "target/VOS-1.0.2-shaded.jar",
         "javafx": false,
         "title": "VOS ERP - MEN2"
     },
@@ -25,6 +24,5 @@
     "license": "ISC",
     "name": "vos-erp-men2",
     "files": ["jdeploy-bundle"],
-    "scripts": {"test": "echo \"Error: no test specified\" && exit 1"},
-    "homepage": "https://men2corp.com/"
+    "scripts": {"test": "echo \"Error: no test specified\" && exit 1"}
 }
